--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/7b12bcc245.js" crossorigin="anonymous"></script>
-    <title>Wedding Invite</title>
+    <title>Dale and Jayne</title>
 </head>
 <body>
 
@@ -16,23 +16,23 @@
         <label for="check" class="checkbtn">
             <i class="fas fa-bars"></i>
         </label>
-        <label class="logo">A&G</label>
+        <label class="logo">D&J</label>
         <ul class="text">
             <li><a href="#story" onclick="myFunction()">OUR STORY</a></li>
-            <li><a href="#stay" onclick="myFunction()">TRAVEL & STAY</a></li>
-            <li><a href="#registry" onclick="myFunction()">PROMISES</a></li>
+            <li><a href="#stay" onclick="myFunction()">Location</a></li>
         </ul>
     </nav>
 
 
     <div class="home hz-margin">
-        <h3>We'er getting married</h3>
-        <h1>Aman. & Gur.</h1>
+        <h3>We're getting married</h3>
+        <h1>Dale and Jayne</h1>
         <div class="container-out">
             
             <div class="container-in text">
-                Friday, Oct. 20, 2023 <br>
-                ITC Sonar Bangla, Kolkata
+                Saturday, Jan. 16, 2026<br>
+                Holy Rosary Parish <br>
+                Angeles City
 
                 <button class="huge-btn">RSVP</button>
             </div>
@@ -114,19 +114,6 @@
                     </div>
                 </div>
             </div>
-
-
-            <div id="registry">
-                <div class="registry-container reveal">
-                    <h3>Promises</h3>
-                    <div class="text">
-                        I will provide welfare and happiness for you and the children that we bear and you shall offer me food and help whenever it is required. Together, we will protect our children and home and stand as each other's strength and courage. I will put every other person secodary to you. You make my like complete and promise to respect you. God bless you, my best friend. I pray thee, may my presence fill our life with joy and prospers.
-                    </div>
-                    <button class="huge-btn text">BLESS US</button>
-                </div>
-                <div class="registry-img registry-img-lg" id="parallax2"></div>
-            </div>
-            <div class="registry-img registry-img-sm"></div>
 
 
             <div class="parting-message reveal">
