--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 Holy Rosary Parish <br>
                 Angeles City
 
-                <button class="huge-btn">RSVP</button>
+                <a href="#rsvp" onclick="myFunction()"><button class="huge-btn">RSVP</button></a>
             </div>
             <div class="home-img" id="home-img-lg"></div>
         </div>
@@ -115,10 +115,11 @@
                 </div>
             </div>
 
-
+            <div id="rsvp">
             <div class="parting-message reveal">
                 <h1>Hope to See You!</h1>
                 <button class="huge-btn">RSVP</button>
+            </div>
             </div>
 
 
