--- a/index.html
+++ b/index.html
@@ -118,16 +118,15 @@
             <div id="rsvp">
             <div class="parting-message reveal">
                 <h1>Hope to See You!</h1>
-                <button class="huge-btn">RSVP</button>
+             <a href="https://x.com/chrmndrrrr/status/1780483755800752632" onclick="myFunction()"><button class="huge-btn">RSVP</button></a>
+                
             </div>
             </div>
 
 
             <footer>
-                <h2>Give us a Call</h2>
-                <h2>Amandeep: 123-456-7890</h2>
-                <h2>Gurpreet: 123-456-7890</h2>
-                <div class="text">© 2023 for Aman and Gur. Made by <a href="https://twitter.com/NathArchak" class="text">@NathArchak</a></div>
+            
+                <div class="text">This page has been made with no relation to real life events, locations, people involved and the like. This has been created for the sake of the story, I think I'm in Love by <a href="https://www.twitter.com/chrmndrrrr">@chrmndrrrr</a> </div>
             </footer>
         </div>
     </div>
