--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
 
 
             <footer>
-            
-                <div class="text">This page has been made with no relation to real life events, locations, people involved and the like. This has been created for the sake of the story, I think I'm in Love by <a href="https://www.twitter.com/chrmndrrrr">@chrmndrrrr</a> </div>
+                
+                <h2>This page has been made with no relation to real life events, locations, people involved and the like. This has been created for the sake of the story, I think I'm in Love by <a href="https://www.twitter.com/chrmndrrrr">@chrmndrrrr</a> </h2>
             </footer>
         </div>
     </div>
