--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <label for="check" class="checkbtn">
             <i class="fas fa-bars"></i>
         </label>
-        <label class="logo">D&J</label>
+        <label class="logo"></label>
         <ul class="text">
             <li><a href="#story" onclick="myFunction()">OUR STORY</a></li>
             <li><a href="#stay" onclick="myFunction()">Location</a></li>
