--- a/index.html
+++ b/index.html
@@ -16,17 +16,18 @@
         <label for="check" class="checkbtn">
             <i class="fas fa-bars"></i>
         </label>
-        <label class="logo"></label>
+        <label class="logo">D&J</label>
         <ul class="text">
-            <li><a href="#story" onclick="myFunction()">OUR STORY</a></li>
+            <li><a href="#story" onclick="myFunction()">Our Story</a></li>
             <li><a href="#stay" onclick="myFunction()">Location</a></li>
         </ul>
     </nav>
 
 
     <div class="home hz-margin">
-        <h3>We're getting married</h3>
+        <h3>You are invited to</h3>
         <h1>Dale and Jayne</h1>
+        <h3>a wedding in a mystery...</h3>
         <div class="container-out">
             
             <div class="container-in text">
@@ -49,12 +50,15 @@
         <div class="timeline-container">
             <div class="timeline-img"></div>
             <div class="timings">
+                <br>
                 <h3>01.&nbsp &nbsp Ceremony</h3>
-                <div class="text">Friday, Oct. 20, 2023 <br>
-                    ITC Sonar Bangla, Kolkata</div>
+                <div class="text">Saturday, Jan. 16, 2026 at 2 PM <br>
+                    Holy Rosary Parish <br>
+                Angeles City</div>
                 <h3>02.&nbsp &nbsp Reception</h3>
-                <div class="text">Sunday, Oct. 22, 2023 <br>
-                    Poddar Vihar, Kolkata</div>
+                <div class="text">Saturday, Jan. 16, 2026 at 4 PM <br>
+                    LALA Garden Cafe <br>
+                    Poinsettia Avenue, Angeles City</div>
             </div>
         </div>
     </div>
@@ -66,9 +70,10 @@
 
             <div id="story" class="hz-margin">
                 <h3 class="reveal">Not Just an <br>
-                    Ordinary Love Story
+                    Ordinary Love Story... <br> <br>
+                    But an epic one.
                 </h3>
-                <p class="text reveal">We met on ferry. Not sure if the kids remember that one. His female housemates encouraged him to get on it - he wasn't keen, but one night we ended up chatting and the next day we met up at the Tellypara Ghat. We spent nine hours together by the river, and I bought him a cotton candy and he says that's how he knew I was the one.</p>
+                <p class="text reveal">With a sudden accident one day at a coffee shop, she realizing that he will be the way to help her on the stories she makes and he, realizing that she will become someone that would listen and also help him on every clues and cases he will solve. Their opposite attitudes won't bring them down, but will attract more as the two of them will become one.</p>
             </div>
 
 
@@ -80,8 +85,8 @@
 
 
             <div class="quote reveal">
-                <h1>“To the world you are one person, but to one person you are the world”.</h1>
-                <div class="author text">Anonymous</div>
+                <h1>“Our first encounter was just at the right time”.</h1>
+                <div class="author text">Det. Dale Palmer</div>
             </div>
 
 
@@ -93,24 +98,28 @@
                 <div class="stay-container reveal">
                     <div class="stay-item">
                         <h3>01. <br>
-                            Getting There
+                            Ceremony
                         </h3>
-                        <div class="text">Easy-to-follow <br> directions to the venue</div>
-                        <div class="text links">MAP & DETAILS</div>
+                        <div class="text links">Holy Rosary Parish</div>
+                        <div class="text links">You may open the map for easy navigation</div>
+                        <div class="text links"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1928.8152772612686!2d120.5890129552284!3d15.134421164454396!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3396f24f232c8c0d%3A0x9806ef08494e895c!2sHoly%20Rosary%20Parish%20Church%20(Pisamban%20Maragul)!5e0!3m2!1sen!2sph!4v1715798125587!5m2!1sen!2sph" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
                     </div>
                     <div class="stay-item">
                         <h3>02. <br>
-                            Once You're There
+                            Reception
                         </h3>
-                        <div class="text">Some fun things to do in <br> the area</div>
-                        <div class="text links">OUR RECOMMENDATIONS</div>
+                        <div class="text">LALA Garden Cafe</div>
+                        <div class="text">You may open the map for easy navigation</div>
+                        <div class="text links"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3851.224038134204!2d120.56449757545845!3d15.146035985407531!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3396f3dc00f893b3%3A0x86b66d97449e4a3b!2sLALA%20Garden%20Cafe!5e0!3m2!1sen!2sph!4v1715798353360!5m2!1sen!2sph" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
                     </div>
                     <div class="stay-item">
                         <h3>03. <br>
-                            Where to Stay
+                            What Colors to where
                         </h3>
-                        <div class="text">Hotels and B&Bs <br> to check out</div>
-                        <div class="text links">LODGING OPTIONS</div>
+                        <div class="text">Business Casual for guests</div>
+                        <div class="text links"><img src="https://i.imgur.com/ycgp1QP.png"></div>
+                        <div class="text">No Wearing of WHITE <br>
+                        NO jeans, T-shirts, polo shirts or sandals/slippers</div>
                     </div>
                 </div>
             </div>
