--- a/index.html
+++ b/index.html
@@ -116,8 +116,7 @@
                         <h3>03. <br>
                             What Colors to where
                         </h3>
-                        <div class="text">Business Casual for guests</div>
-                        <div class="text links"><img src="https://i.imgur.com/ycgp1QP.png"></div>
+                        <div class="text links"><iframe src="https://i.imgur.com/HBBB88G.png"></iframe></div>
                         <div class="text">No Wearing of WHITE <br>
                         NO jeans, T-shirts, polo shirts or sandals/slippers</div>
                     </div>
