--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
                         <h3>01. <br>
                             Ceremony
                         </h3>
-                        <div class="text links">Holy Rosary Parish</div>
-                        <div class="text links">You may open the map for easy navigation</div>
-                        <div class="text links"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1928.8152772612686!2d120.5890129552284!3d15.134421164454396!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3396f24f232c8c0d%3A0x9806ef08494e895c!2sHoly%20Rosary%20Parish%20Church%20(Pisamban%20Maragul)!5e0!3m2!1sen!2sph!4v1715798125587!5m2!1sen!2sph" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+                        <div class="text">Holy Rosary Parish</div>
+                        <div class="text">You may open the map for easy navigation</div>
+                        <div class="text"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1928.8152772612686!2d120.5890129552284!3d15.134421164454396!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3396f24f232c8c0d%3A0x9806ef08494e895c!2sHoly%20Rosary%20Parish%20Church%20(Pisamban%20Maragul)!5e0!3m2!1sen!2sph!4v1715798125587!5m2!1sen!2sph" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
                     </div>
                     <div class="stay-item">
                         <h3>02. <br>
@@ -116,9 +116,9 @@
                         <h3>03. <br>
                             What Colors to where
                         </h3>
-                        <div class="text links"><iframe src="https://i.imgur.com/HBBB88G.png"></iframe></div>
-                        <div class="text">No Wearing of WHITE <br>
+                         <div class="text">No Wearing of WHITE <br>
                         NO jeans, T-shirts, polo shirts or sandals/slippers</div>
+                        <div class="text links"><img src="https://i.imgur.com/HBBB88G.png"></img></div>
                     </div>
                 </div>
             </div>
