--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         </h3>
                          <div class="text">No Wearing of WHITE <br>
                         NO jeans, T-shirts, polo shirts or sandals/slippers</div>
-                        <div class="text links"><img src="https://i.imgur.com/HBBB88G.png"></img></div>
+                        <div class="text links"><img id="motif" src="https://i.imgur.com/HBBB88G.png"></img></div>
                     </div>
                 </div>
             </div>
