--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                         <h3>03. <br>
                             What Colors to where
                         </h3>
-                         <div class="text">No Wearing of WHITE <br>
-                        NO jeans, T-shirts, polo shirts or sandals/slippers</div>
+                         <div class="text">No Wearing of WHITE</div>
+                        <div class="text"> NO jeans, T-shirts, polo shirts or sandals/slippers</div>
                         <div class="text links"><img id="motif" src="https://i.imgur.com/HBBB88G.png"></img></div>
                     </div>
                 </div>
