--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         </h3>
                          <div class="text">No Wearing of WHITE</div>
                         <div class="text"> NO jeans, T-shirts, polo shirts or sandals/slippers</div>
-                        <div class="text"><img name="motif" src="https://i.imgur.com/HBBB88G.png"></div>
+                        <img name="motif" src="https://i.imgur.com/HBBB88G.png">
                     </div>
                 </div>
             </div>
