--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         </h3>
                         <div class="text">LALA Garden Cafe</div>
                         <div class="text">You may open the map for easy navigation</div>
-                        <div class="text links"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3851.224038134204!2d120.56449757545845!3d15.146035985407531!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3396f3dc00f893b3%3A0x86b66d97449e4a3b!2sLALA%20Garden%20Cafe!5e0!3m2!1sen!2sph!4v1715798353360!5m2!1sen!2sph" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+                        <div class="text"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3851.224038134204!2d120.56449757545845!3d15.146035985407531!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3396f3dc00f893b3%3A0x86b66d97449e4a3b!2sLALA%20Garden%20Cafe!5e0!3m2!1sen!2sph!4v1715798353360!5m2!1sen!2sph" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
                     </div>
                     <div class="stay-item">
                         <h3>03. <br>
@@ -118,7 +118,7 @@
                         </h3>
                          <div class="text">No Wearing of WHITE</div>
                         <div class="text"> NO jeans, T-shirts, polo shirts or sandals/slippers</div>
-                        <img name="motif" src="https://i.imgur.com/HBBB88G.png">
+                        <div class="text"><div class="motif"></div></div>
                     </div>
                 </div>
             </div>
