--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 
             <div id="stay">
-                <h2 class="reveal">Travel and Stay</h2>
+                <h2 class="reveal">Locations</h2>
                 <div class="stay-container reveal">
                     <div class="stay-item">
                         <h3>01. <br>
@@ -114,7 +114,7 @@
                     </div>
                     <div class="stay-item">
                         <h3>03. <br>
-                            What Colors to where
+                            What to where
                         </h3>
                          <div class="text">No Wearing of WHITE</div>
                         <div class="text"> NO jeans, T-shirts, polo shirts or sandals/slippers</div>
@@ -125,8 +125,8 @@
 
             <div id="rsvp">
             <div class="parting-message reveal">
-                <h1>Hope to See You!</h1>
-             <a href="https://x.com/chrmndrrrr/status/1780483755800752632" onclick="myFunction()"><button class="huge-btn">RSVP</button></a>
+                <h1>Hope to See You there!</h1>
+             <a href="google form" onclick="myFunction()"><button class="huge-btn">RSVP</button></a>
                 
             </div>
             </div>
@@ -134,7 +134,7 @@
 
             <footer>
                 
-                <h2>This page has been made with no relation to real life events, locations, people involved and the like. This has been created for the sake of the story, I think I'm in Love by <a href="https://www.twitter.com/chrmndrrrr">@chrmndrrrr</a> </h2>
+                <h2>This page has been made with no relation to real life events, locations, people involved and the like. This has been created for the sake of the story, <a href="https://x.com/chrmndrrrr/status/1780483755800752632">I think I'm in Love</a> by <a href="https://www.twitter.com/chrmndrrrr">@chrmndrrrr</a> </h2>
             </footer>
         </div>
     </div>
