--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 Holy Rosary Parish <br>
                 Angeles City
 
-                <a href="#rsvp" onclick="myFunction()"><button class="huge-btn">RSVP</button></a>
+            
             </div>
             <div class="home-img" id="home-img-lg"></div>
         </div>
@@ -126,7 +126,7 @@
             <div id="rsvp">
             <div class="parting-message reveal">
                 <h1>Hope to See You there!</h1>
-             <a href="google form" onclick="myFunction()"><button class="huge-btn">RSVP</button></a>
+             <a href="https://forms.gle/wDBqcgmQcukarvXH9" onclick="myFunction()"><button class="huge-btn">RSVP</button></a>
                 
             </div>
             </div>
