--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="container-out">
             
             <div class="container-in text">
-                Saturday, Jan. 16, 2026<br>
+                Saturday, Jan. 16, 202X<br>
                 Holy Rosary Parish <br>
                 Angeles City
 
@@ -52,11 +52,11 @@
             <div class="timings">
                 <br>
                 <h3>01.&nbsp &nbsp Ceremony</h3>
-                <div class="text">Saturday, Jan. 16, 2026 at 2 PM <br>
+                <div class="text">Saturday, Jan. 16, 202X at 2 PM <br>
                     Holy Rosary Parish <br>
                 Angeles City</div>
                 <h3>02.&nbsp &nbsp Reception</h3>
-                <div class="text">Saturday, Jan. 16, 2026 at 4 PM <br>
+                <div class="text">Saturday, Jan. 16, 202X at 4 PM <br>
                     LALA Garden Cafe <br>
                     Poinsettia Avenue, Angeles City</div>
             </div>
