--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
 
             <footer>
                 
+                <h2>Sorry ito lang po kaya ng powers ko </h2>
                 <h2>This page has been made with no relation to real life events, locations, people involved and the like. This has been created for the sake of the story, <a href="https://x.com/chrmndrrrr/status/1780483755800752632">I think I'm in Love</a> by <a href="https://www.twitter.com/chrmndrrrr">@chrmndrrrr</a> </h2>
             </footer>
         </div>
